AG-10044 - Fix sidenav clipping on medium breakpoints

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SideNavigation.module.scss
@@ -16,7 +16,7 @@
 
     @media screen and (min-width: $breakpoint-docs-nav-large) {
         display: block;
-        width: var(--layout-width-2-12);
+        width: var(--layout-width-3-12);
 
         :global(.noLeftMenu) & {
             width: var(--layout-width-3-12);
